tests/stderr-snapshots/integration__integration__mapfiles__diff_flags_bad_index.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: difficulty flag index out of range
  ┌─ <mapfile-1>:3:3
  │
3 │ 8 b-
  │   ^^ must be from 0 to 7 inclusive


